--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,6 @@
     "        self.choices = ['rock', 'paper', 'scissors']\n",
     "        self.player_name = name\n",
     "        \n",
-    "\n",
     "    def get_player_choice(self):\n",
     "        user_choice = input(f\"Enter your choice {self.choices} :\")\n",
     "        if user_choice.lower() in self.choices:\n",
@@ -56,15 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computer choice is rock\n",
-      "It's a Tie!\n"
+      "Invalid choice. you must select from ['rock', 'paper', 'scissors'].\n",
+      "computer choice is scissors\n",
+      "Oh no! The computer won!\n"
      ]
     }
    ],
